--- a/Students/marcia-benavides/4Challenge/4challenge.ipynb
+++ b/Students/marcia-benavides/4Challenge/4challenge.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {
     "collapsed": true
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {
     "collapsed": true
    },
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {
     "collapsed": true
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {
     "collapsed": true
    },
@@ -115,14 +115,15 @@
    "source": [
     "def  estimate(X):  #X is trainng data \n",
     "    #Note Training Data has a Column named Label which should not be considered for Mean and Covariance Calculations\n",
-    "    Mean = #Edit\n",
-    "    Covar = #Edit\n",
+    "    y = len(X) \n",    
+    "    Mean = sum(X[0:y,0:2] \n",
+    "    Covar = np.dot(np.transpose(X[0:y,0:2]-Mean)/y \n",
     "    return Mean, Covar"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {
     "collapsed": true
    },
@@ -130,13 +131,13 @@
    "source": [
     "from scipy.stats import multivariate_normal as mvnorm\n",
     "def detect(X,M0,V0,M1,V1,threshold):\n",
-    "    L0 = mvnorm.pdf()#EDIT\n",
-    "    L1 = mvnorm.pdf()#EDIT\n",
+    "    L0 = mvnorm.pdf(X,M0,V0)\n",
+    "    L1 = mvnorm.pdf(X,M1,V1) \n",
     "    ratio = L0/L1\n",
-    "    if :  #EDIT\n",
-    "        d = #EDIT\n",
+    "    if :  ratio >= threshold \n",
+    "        d = 0\n",
     "    else:\n",
-    "        d = #EDIT\n",
+    "        d = 1\n",
     "    return d\n"
    ]
   },
@@ -149,19 +150,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "M0,V0 = estimate()#EDIT\n",
-    "M1,V1 = estimate()#EDIT\n",
+    "M0,V0 = estimate(TrainingData0)\n",
+    "M1,V1 = estimate(TrainingData1)\n",
     "threshold = 1\n",
     "if TestData.size != 0:\n",
     "    decision = np.zeros((int(TestData.shape[0]),1))\n",
-    "    for X in TestData: #Note Test Data has a Column named Label which should not be considered for detection \n",
-    "        #EDIT \n",
+    "    for X in TestData[0:y,0:2]: #Note Test Data has a Column named Label which should not be considered for detection \n",
+    "        D = detect(X,M0,V0,M1,V1,threshold)\n",
+    "        decision[counter] = D \n",
+    "        counter +=1 \n",
     "       \n",
     "    TestData1 = np.hstack((TestData[:,0:2],decision))\n",
     "    dftest2 = pd.DataFrame(TestData1,columns=['Y0', 'Y1','label'])\n",
@@ -177,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "metadata": {
     "collapsed": true
    },
